# batttleship

./: .gitignore  pyproject.toml
libs/tgraphics/: pyproject.toml
libs/tgraphics/source/: conf.py  index.rst
libs/tgraphics/tgraphics/: animation.py  color.py  component.py  composables.py  event.py  reactivity.py  size.py  style.py  template.py  utils.py
libs/tsocket/: pyproject.toml
libs/tsocket/tsocket/: client.py  client_thread.py  server.py  shared.py  utils.py
projects/battleship/: pyproject.toml
projects/battleship/battleship/: client.py  client_thread.py  component.py  component_xml.py  multiline_text_input.py  online.py  reactivity.py  server.py
projects/battleship/battleship/client/: client.py  client_thread.py  main.py  test_subscribe.py  utils.py
projects/battleship/battleship/client/component/: button.py  create_player_modal.py  emote_picker.py  game_end_modal.py  game_end_overlay.py  modal.py  overlay.py  suspense.py
projects/battleship/battleship/client/store/: __init__.py  bgm.py  ctx.py  game.py  user.py
projects/battleship/battleship/client/view/: create_player.py  gacha.py  game.py  games.py  lobby.py  main_menu.py  private_lobby.py  profile.py  rematch_lobby.py  settings.py  ship_setup.py  test_anim.py
projects/battleship/battleship/server/: db.py  generate_client.py  generate_client_thread.py  main.py  models.py  server.py
projects/battleship/battleship/server/view/: main_menu.py
projects/battleship/battleship/shared/: avatar_type.py  emote_type.py  logging.py  models.py  obstacle_type.py  ship.py  ship_type.py  shot_type.py  utils.py
