[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tgraphics"
version = "0.0.1.dev0"
description = "GUI library"
repository = "https://github.com/TheerapakG/tgraphics"
authors = [
    "TheerapakG <theerapakg@gmail.com>",
]

packages = [
    { include = "tgraphics" }
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pyglet = "^2.0.9"
sphinx = "^7.2.6"

