[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tsocket"
version = "0.0.1.dev0"
description = "Raw async socket communication library"
repository = "https://github.com/TheerapakG/battleship"
authors = [
    "TheerapakG <theerapakg@gmail.com>",
]

packages = [
    { include = "tsocket" }
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
cattrs = "^23.1.2"
cbor2 = "^5.4.6"
